finish all flow setup

--- a/container/public/index.html
+++ b/container/public/index.html
@@ -7,7 +7,11 @@
 <body>
     <div id="my-products"></div>
     <br>
-    <div id="cart-dev"></div>
+    <div id="my-cart"></div>
+    <br>
+    <div>See the other page with different port</div>
+    <a href="http://localhost:8081">Products</a>
+    <a href="http://localhost:8082">Carts</a>
 </body>
 
 </html>
