--- a/cart/public/index.html
+++ b/cart/public/index.html
@@ -6,6 +6,8 @@
 
 <body>
     <div id="cart-dev"></div>
+    <br>
+    <a href="http://localhost:8080">Back to container root</a>
 </body>
 
 </html>
